# guilib

./: CMakeLists.txt  package.yaml
example/include/guilib/: mesh_impl.h
example/shader/: color.frag  color.vert  tex.frag  tex.vert
example/src/: ascii_pixel_font.cpp  ascii_pixel_font.h  image.cpp  image.h  mesh_builder_impl.cpp  mesh_builder_impl.h  mesh_impl.cpp  mesh_impl.h  shader.cpp  shader.h  texture_impl.cpp  texture_impl.h  window.cpp
include/guilib/: button.h  color.h  container.h  css_parser.h  css_stylesheet.h  css_tokenizer.h  display_mode.h  element.h  font.h  inline_builder.h  label.h  layout_properties.h  mesh.h  mesh_builder.h  ninepatch.h  skin.h  string_util.h  style_common.h  style_def.h  style_def_callbacks.h  style_def_declarations.h  style_props_common.h  style_props_container.h  style_props_element.h  style_props_text.h  style_rule.h  text.h  texture.h  window.h
src/: color.cpp  container.cpp  css_parser.cpp  css_stylesheet.cpp  css_tokenizer.cpp  element.cpp  font.cpp  inline_builder.cpp  main.cpp  string_util.cpp  style_rule.cpp  text.cpp
